@@ -1,5 +1,11 @@
 2003-10-01  Philippe Elie  <phil.el@wanadoo.fr>
 
+	* libop/op_alloc_counter.c: add forward declaration
+	* libop/op_alloc_counter.c: alloc counter in increasing number order,
+	  it's less suprising.
+
+2003-10-01  Philippe Elie  <phil.el@wanadoo.fr>
+
 	* libdb/tests/db_test.c: if previous tests fails a corrupted samples
 	  file can exist in test dir and will be re-used, remove() it.
 
